# http_client

./: .clangd  .gitignore  AGENTS.md  CMakeLists copy 2.txt  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  INSTRUCTIONS.md  README.md  RUN_TESTS_README.md  build.sh  error_codes.ini  gen_error.py  io_monad_test_result.xml  iwyu.md  run_all_tests.sh  test_void_and_then.cpp  vcpkg.json  void_io_demo.cpp
.github/: pull_request_template.md
.zed/: settings.json  tasks.json
bm/: CMakeLists.txt  first_benchmark.cpp
docs/: io_monad_poll_if_changes.md
examples/: basic_usage.cpp
include/: aliases.hpp  api_handler_base.hpp  api_response_result.hpp  backoff_utils.hpp  beast_connection_pool.hpp  client_pool_ssl.hpp  client_pool_ssl.hpp.bak  client_ssl_ctx.hpp  env_file_parser.hpp  error_codes.hpp  http_client_async.hpp  http_client_config_provider.hpp  http_client_error_codes.hpp  http_client_manager.hpp  http_client_monad.hpp  http_session.hpp  http_session_pooled.hpp  http_session_stream.hpp  httpclient_error_codes.hpp  i_output.hpp  in_flight_counter.hpp  io_context_manager.hpp  io_monad.hpp  io_monad.hpp.bak  io_monad_poll_if_legacy.hpp  io_monad_poll_with_state.hpp  io_monad_v2.hpp  io_retry_executor.hpp  ioc_manager_config_provider.hpp  ioc_provider.hpp  json_util.cpp  json_util.hpp  log_stream.hpp  misc_util.hpp  my_di_extension.hpp  proxy_pool.hpp  resp_datastruct.hpp  result_monad.hpp  result_monad_backup.hpp  result_monad_v2.hpp  (+1 more)
src/: client_pool_ssl.cpp  client_pool_ssl.cpp.bak  client_ssl_ctx.cpp  http_client_async.cpp.bak  json_util.cpp  session_instantiations.cpp.bak
tests/: CMakeLists.txt  beast_connection_pool_test.cpp  config_sources_test.cpp  config_sources_yaml_test.cpp  envrc_parse_test.cpp  httpclient_test.cpp  httpserverutil_test.cpp  io_monad_test.cpp  io_monad_test.cpp.bak  io_monad_v2_test.cpp  json_env_substitute_test.cpp  redirect_follow_test.cpp  result_monad_v2_test.cpp  retry_poll_regression_test.cpp  urls_test.cpp
tests/config_dir/: httpclient_config.json  ioc_config.yaml
tests/include/: misc_util.hpp  pch.hpp  root_certificates.hpp  server_certificate.hpp  tutil.hpp
